  \item The \code{rep} function is now often faster for string vectors,
        and for vectors of any type that have names.
  \item Improved methods for symbol lookup are now used, which increase
        speed in many contexts, and especially in functions that are
        defined in packages (rather than in the global workspace).
  \item The speed of \code{nchar} has been greatly improved.
  \item The speed of \code{which} has been improved.
  \item The speed of \code{.Call} has been improved.
  \item The speed of \code{any} and \code{all} has been improved,
        for cases when many elements need to be checked to determine
        the result.
  \item Input and output have been sped up, sometimes considerably,
        both with regard to low-level character io, and with respect to 
        output formatting.
  \item The \code{\%\%} and \code{\%/\%} operators are now faster when 
        their operands are real vectors that contain integer values.
  \item Subscripting with a logical vector is now faster for long vectors.
  \item The \code{grep}, \code{grepl}, \code{sub}, and \code{gsub} functions
        have been speeded up, substantially in some situations.
  \item General interpretive overhead has been reduced in some contexts,
        particularly when extracting or replacing subsets with 
        \code{[.]} or \code{[[.]]}.
  }}

  \subsection{FEATURE CHANGES}{
  \itemize{
  \item The \code{along}, \code{across}, and \code{down} forms of 
        the \code{for} statement (introduced in pqR-2016-06-24 and
        pqR-2016-10-05) now set the loop variable(s) to the
        corresponding length or dimension size when the loop is done
        zero times, rather than to \code{NULL}.
  \item Previously, when a scalar was extracted from a matrix or array 
        with \code{[]}, a name derived from a dimension name was attached
        to it only if a single dimension had names (though this was not 